--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^27.2.5"
   },
   "dependencies": {
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "path": "^0.12.7"
   }
 }
